feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -207,10 +207,10 @@
           ],
           "next": [
             {
-              "name": "\"update\""
+              "name": "'update'"
             },
             {
-              "name": "\"todo\""
+              "name": "'todo'"
             }
           ]
         }
@@ -230,6 +230,20 @@
           ],
           "tip": [
             "Start an editor on a jj config file"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "Target the user-level config"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "Target the repo-level config"
+              ]
+            }
           ]
         },
         {
@@ -248,6 +262,20 @@
           ],
           "tip": [
             "List variables set in config files, along with their values"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "Target the user-level config"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "Target the repo-level config"
+              ]
+            }
           ]
         },
         {
@@ -280,6 +308,20 @@
           ],
           "tip": [
             "Update a config file to set the given option to a given value"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "Target the user-level config"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "Target the repo-level config"
+              ]
+            }
           ]
         },
         {
@@ -289,6 +331,20 @@
           ],
           "tip": [
             "Update a config file to unset the given option"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "Target the user-level config"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "Target the repo-level config"
+              ]
+            }
           ]
         }
       ]
@@ -331,10 +387,10 @@
           ],
           "next": [
             {
-              "name": "\"update\""
+              "name": "'update'"
             },
             {
-              "name": "\"todo\""
+              "name": "'todo'"
             }
           ]
         },
@@ -463,6 +519,11 @@
               "tip": [
                 "U: --depth <DEPTH>\n",
                 "Create a shallow clone of the given depth"
+              ],
+              "next": [
+                {
+                  "name": "1"
+                }
               ]
             },
             {
@@ -591,7 +652,10 @@
           ],
           "next": [
             {
-              "name": "::"
+              "name": "::",
+              "tip": [
+                "All revisions"
+              ]
             },
             {
               "name": "'@'"
@@ -704,6 +768,14 @@
           "tip": [
             "U: -m, --message <MESSAGE>\n",
             "The change description to use"
+          ],
+          "next": [
+            {
+              "name": "'update'"
+            },
+            {
+              "name": "'todo'"
+            }
           ]
         },
         {
@@ -721,6 +793,20 @@
           "tip": [
             "U: -A, --insert-after, --after <REVSETS>\n",
             "Insert the new change after the given commit(s)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -732,6 +818,20 @@
           "tip": [
             "U: -B, --insert-before, --before <REVSETS>\n",
             "Insert the new change before the given commit(s)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         }
       ]
@@ -815,6 +915,20 @@
           "tip": [
             "U: -b, --branch <REVSETS>\n",
             "Rebase the whole branch relative to destination's ancestors (can be repeated)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -825,6 +939,20 @@
           "tip": [
             "U: -s, --source <REVSETS>\n",
             "Rebase specified revision(s) together with their trees of descendants (can be repeated)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -859,6 +987,20 @@
           "tip": [
             "U: -d, --destination <REVSETS>\n",
             "The revision(s) to rebase onto (can be repeated to create a merge commit)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -870,6 +1012,20 @@
           "tip": [
             "U: -A, --insert-after, --after <REVSETS>\n",
             "The revision(s) to insert after (can be repeated to create a merge commit)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -881,6 +1037,20 @@
           "tip": [
             "U: -B, --insert-before, --before <REVSETS>\n",
             "The revision(s) to insert before (can be repeated to create a merge commit)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -935,6 +1105,23 @@
         "Show commit description and changes in a revision"
       ],
       "options": [
+        {
+          "name": "-r",
+          "alias": [
+            "--revision"
+          ],
+          "next": [
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
+          ]
+        },
         {
           "name": "-T",
           "alias": [
@@ -999,7 +1186,8 @@
           "tip": [
             "U: --context <CONTEXT>\n",
             "Number of lines of context to show"
-          ]
+          ],
+          "next": 0
         },
         {
           "name": "-w",
@@ -1092,6 +1280,20 @@
           "tip": [
             "U: -f, --from <REVSETS>\n",
             "Revision(s) to squash from (default: @)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -1103,6 +1305,20 @@
           "tip": [
             "U: -t, --into, --to <REVSET>\n",
             "Revision to squash into (default: @)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -1113,6 +1329,20 @@
           "tip": [
             "U: -d, --destination <REVSETS>\n",
             "(Experimental) The revision(s) to use as parent for the new commit (can be repeated to create a merge commit)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         }
       ]
@@ -1227,7 +1457,8 @@
       "tip": [
         "U: --at-operation, --at-op <AT_OPERATION>\n",
         "Operation to load the repo at"
-      ]
+      ],
+      "next": 0
     },
     {
       "name": "--debug",
@@ -1273,21 +1504,23 @@
       "tip": [
         "U: --config <NAME=VALUE>\n",
         "Additional configuration options (can be repeated)"
-      ]
+      ],
+      "next": 0
     },
     {
       "name": "--config-file",
       "tip": [
         "U: --config-file <PATH>\n",
         "Additional configuration files (can be repeated)"
-      ]
+      ],
+      "next": 0
     }
   ],
   "info": {
     "completion_info": {
       "url": "https://jj-vcs.github.io/",
       "description": [
-        "Jujutsu - A Git-compatible version control system that is both simple and powerful."
+        "Jujutsu (jj) - A Git-compatible version control system that is both simple and powerful."
       ]
     }
   }
