--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -207,10 +207,10 @@
           ],
           "next": [
             {
-              "name": "\"update\""
+              "name": "'update'"
             },
             {
-              "name": "\"todo\""
+              "name": "'todo'"
             }
           ]
         }
@@ -230,6 +230,20 @@
           ],
           "tip": [
             "开始在 jj 配置文件上编辑"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "以用户级配置为目标"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "以仓库级别的配置为目标"
+              ]
+            }
           ]
         },
         {
@@ -248,6 +262,20 @@
           ],
           "tip": [
             "列出配置文件中设置的变量及其值"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "以用户级配置为目标"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "以仓库级别的配置为目标"
+              ]
+            }
           ]
         },
         {
@@ -280,6 +308,20 @@
           ],
           "tip": [
             "更新配置文件以将给定选项设置为给定值"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "以用户级配置为目标"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "以仓库级别的配置为目标"
+              ]
+            }
           ]
         },
         {
@@ -289,6 +331,20 @@
           ],
           "tip": [
             "从配置文件中删除给定选项"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "以用户级配置为目标"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "以仓库级别的配置为目标"
+              ]
+            }
           ]
         }
       ]
@@ -331,10 +387,10 @@
           ],
           "next": [
             {
-              "name": "\"update\""
+              "name": "'update'"
             },
             {
-              "name": "\"todo\""
+              "name": "'todo'"
             }
           ]
         },
@@ -463,6 +519,11 @@
               "tip": [
                 "U: --depth <DEPTH>\n",
                 "创建给定深度的浅表克隆"
+              ],
+              "next": [
+                {
+                  "name": "1"
+                }
               ]
             },
             {
@@ -591,7 +652,10 @@
           ],
           "next": [
             {
-              "name": "::"
+              "name": "::",
+              "tip": [
+                "所有修订版本"
+              ]
             },
             {
               "name": "'@'"
@@ -704,6 +768,14 @@
           "tip": [
             "U: -m, --message <MESSAGE>\n",
             "要使用的变更描述"
+          ],
+          "next": [
+            {
+              "name": "'update'"
+            },
+            {
+              "name": "'todo'"
+            }
           ]
         },
         {
@@ -721,6 +793,20 @@
           "tip": [
             "U: -A, --insert-after, --after <REVSETS>\n",
             "在给定提交之后插入新变更"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -732,6 +818,20 @@
           "tip": [
             "U: -B, --insert-before, --before <REVSETS>\n",
             "在给定提交之前插入新变更"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         }
       ]
@@ -815,6 +915,20 @@
           "tip": [
             "U: -b, --branch <REVSETS>\n",
             "相对于目标的祖先重新调整整个分支的基准（可重复）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -825,6 +939,20 @@
           "tip": [
             "U: -s, --source <REVSETS>\n",
             "变基指定的修订版本及其后代树（可重复）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -859,6 +987,20 @@
           "tip": [
             "U: -d, --destination <REVSETS>\n",
             "变基目标（可重复以创建合并提交）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -870,6 +1012,20 @@
           "tip": [
             "U: -A, --insert-after, --after <REVSETS>\n",
             "在给定提交之后插入新变更（可重复以创建合并提交）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -881,6 +1037,20 @@
           "tip": [
             "U: -B, --insert-before, --before <REVSETS>\n",
             "在给定提交之前插入新变更（可重复以创建合并提交）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -935,6 +1105,23 @@
         "显示修订的变更描述和变更内容"
       ],
       "options": [
+        {
+          "name": "-r",
+          "alias": [
+            "--revision"
+          ],
+          "next": [
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
+          ]
+        },
         {
           "name": "-T",
           "alias": [
@@ -999,7 +1186,8 @@
           "tip": [
             "U: --context <CONTEXT>\n",
             "要显示的上下文行数"
-          ]
+          ],
+          "next": 0
         },
         {
           "name": "-w",
@@ -1092,6 +1280,20 @@
           "tip": [
             "U: -f, --from <REVSETS>\n",
             "从其变基的修订 (默认: @)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -1103,6 +1305,20 @@
           "tip": [
             "U: -t, --into, --to <REVSET>\n",
             "合并到的修订 (默认: @)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         },
         {
@@ -1113,6 +1329,20 @@
           "tip": [
             "U: -d, --destination <REVSETS>\n",
             "（实验性）用作新提交的父提交的修订版本（可重复使用以创建合并提交）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
           ]
         }
       ]
@@ -1227,7 +1457,8 @@
       "tip": [
         "U: --at-operation, --at-op <AT_OPERATION>\n",
         "要加载的操作"
-      ]
+      ],
+      "next": 0
     },
     {
       "name": "--debug",
@@ -1273,21 +1504,23 @@
       "tip": [
         "U: --config <NAME=VALUE>\n",
         "额外的配置选项（可以重复）"
-      ]
+      ],
+      "next": 0
     },
     {
       "name": "--config-file",
       "tip": [
         "U: --config-file <PATH>\n",
         "额外的配置文件（可以重复）"
-      ]
+      ],
+      "next": 0
     }
   ],
   "info": {
     "completion_info": {
       "url": "https://jj-vcs.github.io/",
       "description": [
-        "Jujutsu - 一个与 Git 兼容的版本控制系统，既简单又强大。"
+        "Jujutsu (jj) - 一个与 Git 兼容的版本控制系统，既简单又强大。"
       ]
     }
   }
