feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -607,6 +607,121 @@
           "name": "push",
           "tip": [
             "Push to a Git remote"
+          ],
+          "options": [
+            {
+              "name": "--remote",
+              "tip": [
+                "U: --remote <REMOTE>\n",
+                "The remote to push to (only named remotes are supported)"
+              ],
+              "next": 0
+            },
+            {
+              "name": "-b",
+              "alias": [
+                "--bookmark"
+              ],
+              "tip": [
+                "-b, --bookmark <BOOKMARK>\n",
+                "Push only this bookmark, or bookmarks matching a pattern (can be repeated)"
+              ],
+              "next": []
+            },
+            {
+              "name": "--all",
+              "tip": [
+                "Push all bookmarks (including new bookmarks)"
+              ]
+            },
+            {
+              "name": "--tracked",
+              "tip": [
+                "Push all tracked bookmarks"
+              ]
+            },
+            {
+              "name": "--deleted",
+              "tip": [
+                "Push all deleted bookmarks"
+              ]
+            },
+            {
+              "name": "-N",
+              "alias": [
+                "--allow-new"
+              ],
+              "tip": [
+                "Allow pushing new bookmarks"
+              ]
+            },
+            {
+              "name": "--allow-empty-description",
+              "tip": [
+                "Allow pushing commits with empty descriptions"
+              ]
+            },
+            {
+              "name": "--allow-private",
+              "tip": [
+                "Allow pushing commits that are private"
+              ]
+            },
+            {
+              "name": "-r",
+              "alias": [
+                "--revisions"
+              ],
+              "tip": [
+                "U: -r, --revisions <REVSETS>\n",
+                "Push bookmarks pointing to these commits (can be repeated)"
+              ],
+              "next": [
+                {
+                  "name": "'@'"
+                },
+                {
+                  "name": "'@-'"
+                },
+                {
+                  "name": "'@+'"
+                }
+              ]
+            },
+            {
+              "name": "-c",
+              "alias": [
+                "--change"
+              ],
+              "tip": [
+                "U: -c, --change <REVSETS>\n",
+                "Push this commit by creating a bookmark (can be repeated)"
+              ],
+              "next": [
+                {
+                  "name": "'@'"
+                },
+                {
+                  "name": "'@-'"
+                },
+                {
+                  "name": "'@+'"
+                }
+              ]
+            },
+            {
+              "name": "--named",
+              "tip": [
+                "U: --named <NAME=REVISION>\n",
+                "Specify a new bookmark name and a revision to push under that name, e.g. '--named myfeature=@'"
+              ]
+            },
+            {
+              "name": "--dry-run",
+              "tip": [
+                "Only display what will change on the remote"
+              ]
+            }
           ]
         },
         {
