--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -607,6 +607,121 @@
           "name": "push",
           "tip": [
             "将变更推送到 Git 远程"
+          ],
+          "options": [
+            {
+              "name": "--remote",
+              "tip": [
+                "U: --remote <REMOTE>\n",
+                "要推送的远程仓库（仅支持命名的远程仓库）"
+              ],
+              "next": 0
+            },
+            {
+              "name": "-b",
+              "alias": [
+                "--bookmark"
+              ],
+              "tip": [
+                "-b, --bookmark <BOOKMARK>\n",
+                "仅推送此书签，或匹配模式的书签（可以重复）"
+              ],
+              "next": []
+            },
+            {
+              "name": "--all",
+              "tip": [
+                "推送所有书签（包括新书签）"
+              ]
+            },
+            {
+              "name": "--tracked",
+              "tip": [
+                "推送所有已跟踪的书签"
+              ]
+            },
+            {
+              "name": "--deleted",
+              "tip": [
+                "推送所有已删除的书签"
+              ]
+            },
+            {
+              "name": "-N",
+              "alias": [
+                "--allow-new"
+              ],
+              "tip": [
+                "允许推送新书签"
+              ]
+            },
+            {
+              "name": "--allow-empty-description",
+              "tip": [
+                "允许推送提交描述为空的提交"
+              ]
+            },
+            {
+              "name": "--allow-private",
+              "tip": [
+                "允许推送私有提交"
+              ]
+            },
+            {
+              "name": "-r",
+              "alias": [
+                "--revisions"
+              ],
+              "tip": [
+                "U: -r, --revisions <REVSETS>\n",
+                "推送指向这些提交的书签（可以重复）"
+              ],
+              "next": [
+                {
+                  "name": "'@'"
+                },
+                {
+                  "name": "'@-'"
+                },
+                {
+                  "name": "'@+'"
+                }
+              ]
+            },
+            {
+              "name": "-c",
+              "alias": [
+                "--change"
+              ],
+              "tip": [
+                "U: -c, --change <REVSETS>\n",
+                "通过创建书签推送此提交（可以重复）"
+              ],
+              "next": [
+                {
+                  "name": "'@'"
+                },
+                {
+                  "name": "'@-'"
+                },
+                {
+                  "name": "'@+'"
+                }
+              ]
+            },
+            {
+              "name": "--named",
+              "tip": [
+                "U: --named <NAME=REVISION>\n",
+                "指定一个新的书签名称和一个要推送的修订版本，例如 '--named myfeature=@'"
+              ]
+            },
+            {
+              "name": "--dry-run",
+              "tip": [
+                "仅显示将在远程上发生的变更"
+              ]
+            }
           ]
         },
         {
