feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -159,6 +159,14 @@
           ],
           "tip": [
             "Start tracking given remote bookmarks"
+          ],
+          "next": [
+            {
+              "name": "main@origin"
+            },
+            {
+              "name": "dev@origin"
+            }
           ]
         },
         {
@@ -836,11 +844,11 @@
           "name": "--author-timestamp",
           "tip": [
             "U: --author-timestamp <AUTHOR_TIMESTAMP>\n",
-            "Set the author date to the given date either human readable, eg Sun, 23 Jan 2000 01:23:45 JST) or as a time stamp, eg 2000-01-23T01:23:45+09:00)"
+            "Set the author date to the given date either human readable, eg Sun, 23 Jan 2000 01:23:45 CST) or as a time stamp, eg 2000-01-23T01:23:45+08:00)"
           ],
           "next": [
             {
-              "name": "2000-01-23T01:23:45+09:00"
+              "name": "'2000-01-23T01:23:45+08:00'"
             }
           ]
         },
@@ -1458,6 +1466,111 @@
             {
               "name": "'@+'"
             }
+          ]
+        },
+        {
+          "name": "-A",
+          "alias": [
+            "--insert-after",
+            "--after"
+          ],
+          "tip": [
+            "U: -A, --insert-after, --after <REVSETS>\n",
+            "(Experimental) The revision(s) to insert the new commit after (can be repeated to create a merge commit)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
+          ]
+        },
+        {
+          "name": "-B",
+          "alias": [
+            "--insert-before",
+            "--before"
+          ],
+          "tip": [
+            "U: -B, --insert-before, --before <REVSETS>\n",
+            "(Experimental) The revision(s) to insert the new commit before (can be repeated to create a merge commit)"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
+          ]
+        },
+        {
+          "name": "-m",
+          "alias": [
+            "--message"
+          ],
+          "tip": [
+            "U: -m, --message <MESSAGE>\n",
+            "The description to use for squashed revision (don't open editor)"
+          ],
+          "next": [
+            {
+              "name": "'update'"
+            },
+            {
+              "name": "'todo'"
+            }
+          ]
+        },
+        {
+          "name": "-u",
+          "alias": [
+            "--use-destination-message"
+          ],
+          "tip": [
+            "U: -u, --use-destination-message\n",
+            "Use the description of the destination revision and discard the description(s) of the source revision(s)"
+          ]
+        },
+        {
+          "name": "-i",
+          "alias": [
+            "--interactive"
+          ],
+          "tip": [
+            "U: -i, --interactive\n",
+            "Interactively choose which parts to squash"
+          ]
+        },
+        {
+          "name": "--tool",
+          "tip": [
+            "U: --tool <NAME>\n",
+            "Specify diff editor to be used (implies --interactive)"
+          ],
+          "next": 0
+        },
+        {
+          "name": "-k",
+          "alias": [
+            "--keep-emptied"
+          ],
+          "tip": [
+            "The source revision will not be abandoned"
           ]
         }
       ]
