--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -159,6 +159,14 @@
           ],
           "tip": [
             "开始跟踪给定远程书签"
+          ],
+          "next": [
+            {
+              "name": "main@origin"
+            },
+            {
+              "name": "dev@origin"
+            }
           ]
         },
         {
@@ -836,11 +844,11 @@
           "name": "--author-timestamp",
           "tip": [
             "U: --author-timestamp <AUTHOR_TIMESTAMP>\n",
-            "将提交者日期设置为所提供的日期，该日期可以是人类可读的，例如 Sun, 23 Jan 2000 01:23:45 JST)\n也可以是时间戳，例如 2000-01-23T01:23:45+09:00"
+            "将提交者日期设置为所提供的日期，该日期可以是人类可读的，例如 Sun, 23 Jan 2000 01:23:45 CST)\n也可以是时间戳，例如 2000-01-23T01:23:45+08:00"
           ],
           "next": [
             {
-              "name": "2000-01-23T01:23:45+09:00"
+              "name": "'2000-01-23T01:23:45+08:00'"
             }
           ]
         },
@@ -1458,6 +1466,111 @@
             {
               "name": "'@+'"
             }
+          ]
+        },
+        {
+          "name": "-A",
+          "alias": [
+            "--insert-after",
+            "--after"
+          ],
+          "tip": [
+            "U: -A, --insert-after, --after <REVSETS>\n",
+            "（实验性）要在其后插入新提交的修订版本（可重复操作以创建合并提交）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
+          ]
+        },
+        {
+          "name": "-B",
+          "alias": [
+            "--insert-before",
+            "--before"
+          ],
+          "tip": [
+            "U: -B, --insert-before, --before <REVSETS>\n",
+            "（实验性）要在其之前插入新提交的修订版本（可重复操作以创建合并提交）"
+          ],
+          "next": [
+            {
+              "name": "::"
+            },
+            {
+              "name": "'@'"
+            },
+            {
+              "name": "'@-'"
+            },
+            {
+              "name": "'@+'"
+            }
+          ]
+        },
+        {
+          "name": "-m",
+          "alias": [
+            "--message"
+          ],
+          "tip": [
+            "U: -m, --message <MESSAGE>\n",
+            "用于压缩修订版本的描述（不打开编辑器）"
+          ],
+          "next": [
+            {
+              "name": "'update'"
+            },
+            {
+              "name": "'todo'"
+            }
+          ]
+        },
+        {
+          "name": "-u",
+          "alias": [
+            "--use-destination-message"
+          ],
+          "tip": [
+            "U: -u, --use-destination-message\n",
+            "使用目标修订版本的描述，并舍弃源修订版本的描述。"
+          ]
+        },
+        {
+          "name": "-i",
+          "alias": [
+            "--interactive"
+          ],
+          "tip": [
+            "U: -i, --interactive\n",
+            "交互式选择要压缩的部分"
+          ]
+        },
+        {
+          "name": "--tool",
+          "tip": [
+            "U: --tool <NAME>\n",
+            "指定要使用的差异编辑器 (意味着--interactive)"
+          ],
+          "next": 0
+        },
+        {
+          "name": "-k",
+          "alias": [
+            "--keep-emptied"
+          ],
+          "tip": [
+            "源修订版本不会被放弃"
           ]
         }
       ]
